# hmpps-terraform-discovery

./: .gitignore  Dockerfile  README.md  globals.py  main.py  pyproject.toml  requirements.txt  terraform_discovery-old.py  terraform_discovery.py
.github/: dependabot.yml
.github/actions/cloud-platform-deploy/: action.yml
.github/actions/get-env-details/: action.yml
.github/workflows/: backup_repository.yml  build.yml  deploy.yml  pipeline.yml  security_codeql_actions_scan.yml  security_codeql_python_scan.yml  security_snyk_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml
classes/: github.py  service_catalogue.py  slack.py
helm_deploy/: values-dev.yaml  values-prod.yaml
helm_deploy/hmpps-terraform-discovery/: Chart.yaml  values.yaml
helm_deploy/hmpps-terraform-discovery/templates/: terraform-discovery-cron-job.yaml
processes/: scheduled_jobs.py
