[project]
name = "hmpps-terraform-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython==3.1.45",
    "hmpps-sre-python-lib",
    "tfparse @ git+https://github.com/cloud-custodian/tfparse.git@v0.6.18", 
]

[tool.uv.sources]
hmpps-sre-python-lib = { url = "https://github.com/ministryofjustice/hmpps-sre-python-lib/releases/download/v0.1.10/hmpps_sre_python_lib-0.1.10-py3-none-any.whl" }
