[project]
name = "hmpps-terraform-discovery"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython==3.1.50",
    "hmpps-sre-python-lib",
    "tfparse==0.6.20",
]

[tool.uv.sources]
hmpps-sre-python-lib = { url = "https://github.com/ministryofjustice/hmpps-sre-python-lib/releases/download/v1.2.4/hmpps_sre_python_lib-1.2.4-py3-none-any.whl" }
